H-810, H-811: Allow changing the privacy of entities (#3337)
