# apps/hash-graph/openapi/openapi.json
@@ -825,6 +825,96 @@
         }
       }
     },
+    "/entities/{entity_id}/owners/{owner}": {
+      "post": {
+        "tags": [
+          "Graph",
+          "Entity"
+        ],
+        "operationId": "add_entity_owner",
+        "parameters": [
+          {
+            "name": "X-Authenticated-User-Actor-Id",
+            "in": "header",
+            "description": "The ID of the actor which is used to authorize the request",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/AccountId"
+            }
+          },
+          {
+            "name": "entity_id",
+            "in": "path",
+            "description": "The Entity to add the owner to",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/EntityId"
+            }
+          },
+          {
+            "name": "owner",
+            "in": "path",
+            "description": "The owner to add to the entity",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/OwnedById"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "The owner was added to the entity"
+          },
+          "403": {
+            "description": "Permission denied"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Graph",
+          "Entity"
+        ],
+        "operationId": "remove_entity_owner",
+        "parameters": [
+          {
+            "name": "X-Authenticated-User-Actor-Id",
+            "in": "header",
+            "description": "The ID of the actor which is used to authorize the request",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/AccountId"
+            }
+          },
+          {
+            "name": "entity_id",
+            "in": "path",
+            "description": "The Entity to remove the owner from",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/EntityId"
+            }
+          },
+          {
+            "name": "owner",
+            "in": "path",
+            "description": "The owner to remove from the entity",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/Viewer"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "The owner was removed from the entity"
+          },
+          "403": {
+            "description": "Permission denied"
+          }
+        }
+      }
+    },
     "/entities/{entity_id}/permissions/update": {
       "get": {
         "tags": [
@@ -869,13 +959,13 @@
         }
       }
     },
-    "/entities/{entity_id}/public": {
+    "/entities/{entity_id}/viewers/{viewer}": {
       "post": {
         "tags": [
           "Graph",
           "Entity"
         ],
-        "operationId": "make_entity_public",
+        "operationId": "add_entity_viewer",
         "parameters": [
           {
             "name": "X-Authenticated-User-Actor-Id",
@@ -889,16 +979,25 @@
           {
             "name": "entity_id",
             "in": "path",
-            "description": "The Entity to make public",
+            "description": "The Entity to add the viewer to",
             "required": true,
             "schema": {
               "$ref": "#/components/schemas/EntityId"
+            }
+          },
+          {
+            "name": "viewer",
+            "in": "path",
+            "description": "The viewer to add to the entity",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/Viewer"
             }
           }
         ],
         "responses": {
           "204": {
-            "description": "The entity was made public"
+            "description": "The viewer was added to the entity"
           },
           "403": {
             "description": "Permission denied"
@@ -910,7 +1009,7 @@
           "Graph",
           "Entity"
         ],
-        "operationId": "make_entity_private",
+        "operationId": "remove_entity_viewer",
         "parameters": [
           {
             "name": "X-Authenticated-User-Actor-Id",
@@ -924,16 +1023,25 @@
           {
             "name": "entity_id",
             "in": "path",
-            "description": "The Entity to make private",
+            "description": "The Entity to remove the viewer from",
             "required": true,
             "schema": {
               "$ref": "#/components/schemas/EntityId"
+            }
+          },
+          {
+            "name": "viewer",
+            "in": "path",
+            "description": "The viewer to remove from the entity",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/Viewer"
             }
           }
         ],
         "responses": {
           "204": {
-            "description": "The entity was made private"
+            "description": "The viewer was removed from the entity"
           },
           "403": {
             "description": "Permission denied"
@@ -3528,6 +3636,19 @@
             ]
           }
         }
+      },
+      "Viewer": {
+        "oneOf": [
+          {
+            "type": "string",
+            "enum": [
+              "public"
+            ]
+          },
+          {
+            "$ref": "#/components/schemas/OwnedById"
+          }
+        ]
       }
     }
   },
